# arbiter

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/resources/: solana-config.yaml
.github/workflows/: lint.yaml  release.yaml  test.yaml
app/: next.config.js  package-lock.json  package.json  tsconfig.json
app/components/: WalletConnectionProvider.tsx
app/components/AccountDetailsPanel/: index.tsx
app/components/CreateClerk/: index.tsx
app/components/DocumentsTable/: DocumentModal.tsx  DocumentModalTitle.tsx  index.tsx
app/components/Header/: ConnectButton.tsx  index.tsx
app/lib/: hashusign.ts  idl.ts  notifications.tsx  util.ts
app/lib/context/: clerk.tsx  documents.tsx  index.ts  program.tsx
app/lib/idl/: hashusign.json
app/pages/: _app.tsx  _document.tsx  index.tsx
app/pages/sign/: [pubkey].tsx
app/styles/: custom-styles.less
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  macros.rs  program.rs  terminal.rs
cli/src/cmd/: clerk.rs  document.rs  mod.rs
programs/arbiter/: Cargo.toml
programs/arbiter/src/: error.rs  lib.rs  state.rs
programs/arbiter/src/instructions/: add_participant.rs  finalize.rs  init_clerk.rs  init_document.rs  mod.rs  upgrade.rs
programs/arbiter/src/state/: clerk.rs  document.rs
programs/docuhash/: Cargo.toml
programs/docuhash/src/: error.rs  lib.rs
programs/docuhash/src/instructions/: add_signature.rs  finalize.rs  init_clerk.rs  init_document.rs  mod.rs  stage_upgrade.rs  upgrade_limit.rs
programs/docuhash/src/state/: clerk.rs  document.rs  mod.rs
programs/hashusign/: Cargo.toml
programs/hashusign/src/: error.rs  lib.rs
programs/hashusign/src/instructions/: add_signature.rs  finalize.rs  init_clerk.rs  init_document.rs  upgrade_limit.rs
programs/hashusign/src/state/: clerk.rs  document.rs
tests/: arbiter.spec.ts  docuhash.spec.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
