[package]
name = "arbiter-cli"
version = "0.1.0"
description = "Arbiter command line interface for program workflows"
edition = "2021"
repository = "https://github.com/callens/arbiter"

[[bin]]
name = "arbiter"
path = "src/bin/main.rs"

[dependencies]
anchor-client = "0.24"
anyhow = "1.0"
arbiter = { path = "../programs/arbiter", features = ["cli"] }
clap = { version = "3.1", features = ["derive"] }
