[package]
name = "arbiter"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arbiter"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
cli = ["no-entrypoint", "serde"]

[dependencies]
anchor-lang = "0.24.2"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde = "1.0"
serde_test = "1.0"
